--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -34,7 +34,7 @@
     <preference name="target-device"              value="handset" />      <!-- all: possible values handset, tablet, or universal -->
     <preference name="fullscreen"                 value="false" />           <!-- all: hides the status bar at the top of the screen -->
     <preference name="prerendered-icon"           value="true" />           <!-- ios: if icon is prerendered, iOS will not apply it's gloss to the app's icon on the user's home screen -->
-    <preference name="ios-statusbarstyle"         value="black-opaque" />   <!-- ios: black-translucent will appear black because the PhoneGap webview doesn't go beneath the status bar -->
+    <!--<preference name="ios-statusbarstyle"         value="black-opaque" /> -->  <!-- ios: black-translucent will appear black because the PhoneGap webview doesn't go beneath the status bar -->
     <preference name="detect-data-types"          value="true" />           <!-- ios: controls whether data types (such as phone no. and dates) are automatically turned into links by the system -->
     <preference name="exit-on-suspend"            value="false" />          <!-- ios: if set to true, app will terminate when home button is pressed -->
     <preference name="auto-hide-splash-screen"    value="true" />           <!-- ios: if set to false, the splash screen must be hidden using a JavaScript API -->
@@ -45,7 +45,7 @@
     <preference name="UIWebViewBounce" value="false" />
     <!--<preference name="SuppressesIncrementalRendering" value="true"/>-->
     
-    <preference name="StatusBarBackgroundColor" value="#252c47" />
+    <!--<preference name="StatusBarBackgroundColor" value="#252c47" />-->
 
     <!-- Plugins -->
 
