--- a/www/css/index.css
+++ b/www/css/index.css
@@ -143,7 +143,7 @@ body {
 }*/
 	#helamenyn{
 		position: fixed;
-		margin-top: 20px;
+		/*margin-top: 20px;*/
 	}
 	#pushmeny{
 		visibility: hidden;
