--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -68,7 +68,7 @@
     <gap:plugin name="org.apache.cordova.geolocation" />
     <gap:plugin name="org.apache.cordova.globalization" /> -->
     <gap:plugin name="org.apache.cordova.inappbrowser" />
-    <!-- <gap:plugin name="org.apache.cordova.media" /> -->
+    <gap:plugin name="org.apache.cordova.media" />
     <gap:plugin name="org.apache.cordova.network-information" />
     <gap:plugin name="com.phonegap.plugin.statusbar" />
 	<!--<gap:plugin name="org.apache.cordova.splashscreen" />
