--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -70,7 +70,7 @@
     <gap:plugin name="org.apache.cordova.inappbrowser" />
     <gap:plugin name="org.apache.cordova.media" />
     <gap:plugin name="org.apache.cordova.network-information" />
-    <gap:plugin name="com.phonegap.plugin.statusbar" />
+    <!--<gap:plugin name="com.phonegap.plugin.statusbar" />-->
 	<!--<gap:plugin name="org.apache.cordova.splashscreen" />
     <gap:plugin name="org.apache.cordova.vibration" /> -->
 
